Modify the .embed-container class for our product-category templates in WooCommerce

--- a/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_product-cat.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_product-cat.scss
@@ -47,8 +47,8 @@
 }
 .video-cat {
   max-width: 765px;
-  .embed-container {
-    padding: 0;
+  &> .embed-container {
+   display: flex;
   }
 }
 .iframe-embed {
