--- a/wp-content/themes/soss-catalog-theme/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/components/_buttons.scss
@@ -146,10 +146,6 @@
      transition: background-color 0.5s ease;
      background-color: darken($brand-primary, 15%) !important;
      color: white !important;
-    > .fa-spin-hover {
-       animation: fa-spin 2s infinite linear;
-       color: white;
-     }
    }
  }
 .brand-cta-red {
@@ -167,11 +163,35 @@
     font-size: 1rem;
     content: '\f054';
   }
-
   &:hover {
     transition: background-color 0.5s ease;
     background-color: darken($brand-primary, 15%) !important;
     color: white !important;
+  }
+}
+.brand-cta-gray {
+  border-radius: 5px;
+  border: 2px solid white;
+  background-color: $gray !important;
+  box-shadow: none;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: white !important;
+  padding: .4rem 1.6rem .4rem 1.5rem;
+  &:after {
+    margin-left: .5rem;
+    font-family: 'FontAwesome';
+    font-size: 1rem;
+    content: '\f054';
+  }
+  &:hover {
+    transition: background-color 0.5s ease;
+    background-color: darken($gray, 15%) !important;
+    color: white !important;
+    > .fa-spin-hover {
+      animation: fa-spin 2s infinite linear;
+      color: white !important;
+    }
   }
 }
 .fade-in {
