--- a/wp-content/themes/soss-catalog-theme/assets/styles/common/_variables.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/common/_variables.scss
@@ -261,44 +261,19 @@ $grid-gutter-widths: (
 //
 // Font, line-height, and color for body text, headings, and more.
 @import '~font-awesome/css/font-awesome.css';
-//@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,700");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,700&display=swap');
 // Don't have all the fonts embedded
-//@font-face {
-//  font-family: 'Montserrat';
-//  src: url('/fonts/Montserrat-Regular.eot'); /* IE9 Compat Modes */
-//  src: url('/fonts/Montserrat-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-//  src: url('/fonts/Montserrat-Regular.woff2') format('woff2'); /* Super Modern Browsers */
-// url('/fonts/Montserrat-Regular.woff') format('woff'), /* Pretty Modern Browsers */
-// url('/fonts/Montserrat-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-//  url('/fonts/Montserrat-Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
-//
-//  src: url('/fonts/Montserrat-Bold.eot'); /* IE9 Compat Modes */
-//  src: url('/fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-//  src: url('/fonts/Montserrat-Bold.woff2') format('woff2'); /* Super Modern Browsers */
-//  url('/fonts/Montserrat-Bold.woff') format('woff'), /* Pretty Modern Browsers */
-//  url('/fonts/Montserrat-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
-//  url('/fonts/Montserrat-Bold.svg#svgFontName') format('svg'); /* Legacy iOS */
-//
-//  src: url('/fonts/Montserrat-Light.eot'); /* IE9 Compat Modes */
-//  src: url('/fonts/Montserrat-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-//src: url('/fonts/Montserrat-Light.woff2') format('woff2'); /* Super Modern Browsers */
-//  url('/fonts/Montserrat-Light.woff') format('woff'), /* Pretty Modern Browsers */
-//  url('/fonts/Montserrat-Light.ttf')  format('truetype'), /* Safari, Android, iOS */
-//  url('/fonts/Montserrat-Light.svg#svgFontName') format('svg'); /* Legacy iOS */
-//
-//  src: url('/fonts/Montserrat-Medium.eot'); /* IE9 Compat Modes */
-//  src: url('/fonts/Montserrat-Medium.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-//src: url('/fonts/Montserrat-Medium.woff2') format('woff2'); /* Super Modern Browsers */
-//  url('/fonts/Montserrat-Medium.woff') format('woff'), /* Pretty Modern Browsers */
-//  url('/fonts/Montserrat-Medium.ttf')  format('truetype'), /* Safari, Android, iOS */
-//  url('/fonts/Montserrat-Medium.svg#svgFontName') format('svg'); /* Legacy iOS */
-//}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/dist/css/Montserrat-Light.woff2') format('woff2'); /* Super Modern Browsers */
+  src: url('/dist/css/Montserrat-BoldItalic.woff2') format('woff2');
+  src: url('/dist/css/Montserrat-Italic.woff2') format('woff2');
+  src: url('/dist/css/Montserrat-Medium.woff2') format('woff2');
+  src: url('/dist/css/Montserrat-MediumItalic.woff2') format('woff2');
+  src: url('/dist/css/Montserrat-Regular.woff2') format('woff2');
+}
 $font-family-icon: "FontAwesome";
 $font-family-sans-serif: "Montserrat", sans-serif;
-//$font-family-sans-serif: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-//$font-family-serif:      Georgia, "Times New Roman", Times, serif;
-//$font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base:       $font-family-sans-serif;
 
 $font-size-base: 1rem; // Assumes the browser default, typically `16px`
