--- a/wp-content/models/styles-min.css
+++ b/wp-content/models/styles-min.css
@@ -27,29 +27,70 @@ footer {
 .modelDisplay {
   display: none;
 }
-.loadingScreen {
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  color: black;
+.loading-gif {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.loadingScreen .content {
-  margin-top: 2vh;
+
+.loading {
+  display: flex;
+  flex-direction: row;
 }
-.loadingBar {
-  display: block;
-  position: relative;
-  width: 0;
-  height: 4px;
-  background-color: #636363;
+.loading__letter {
+  font-size: 1.4rem;
+  font-weight: normal;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  animation-name: bounce;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
 }
-.loading-gif img {
-  display: block;
-  position: fixed;
-  top: 42vh;
-  left: 35vw;
-  width: 20vw;
+
+.loading__letter:nth-child(2) {
+  animation-delay: .1s;
 }
+.loading__letter:nth-child(3) {
+  animation-delay: .2s;
+}
+.loading__letter:nth-child(4) {
+  animation-delay: .3s;
+}
+.loading__letter:nth-child(5) {
+  animation-delay: .4s;
+}
+.loading__letter:nth-child(6) {
+  animation-delay: .5s;
+}
+.loading__letter:nth-child(7) {
+  animation-delay: .6s;
+}
+.loading__letter:nth-child(8) {
+  animation-delay: .8s;
+}
+.loading__letter:nth-child(9) {
+  animation-delay: 1s;
+}
+.loading__letter:nth-child(10) {
+  animation-delay: 1.2s;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0rem);
+  }
+  40% {
+    transform: translateY(-1.4rem);
+  }
+  80%,
+  100% {
+    transform: translateY(0.2rem);
+  }
+}
+
+
 .menu {
   position: absolute;
   top: 10px;
