Hard-coded slider update

--- a/wp-content/themes/soss-catalog-theme/assets/styles/main.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/main.scss
@@ -6,8 +6,8 @@
 // Required
 //@import "~bootstrap/scss/functions";
 
-$fa-font-path: "~font-awesome/fonts";
-@import "~font-awesome/scss/font-awesome.scss";
+
+//@import "~font-awesome/scss/font-awesome.scss";
 
 
 
