--- a/wp-content/themes/soss-catalog-theme/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/components/_buttons.scss
@@ -196,9 +196,9 @@
 .cta-submit {
   max-width: max-content;
 }
-.cta-disabled {
-  background: rgb(191,191,191);
-  background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.3)), url("/wp-content/themes/soss-catalog-theme/dist/symphony.png") repeat center center;
+.cta-disabled { //http://www.heropatterns.com/ charlie brown pattern
+  background: linear-gradient(rgba(255,255,255,0.3), rgba(0,0,0,0.3)), url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23ababab' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+
   border: 1px solid $grayer;
   border-radius: 0.3rem;
   color: $gray-dark;
